[package]
name = "fractal_explorer"
version = "0.1.0"
authors = ["Chris Whealy <chris@whealy.com>"]
edition = "2018"
description = "Draws the Mandelbrot Set and the corresponding Julia Set for a given location on the Mandelbrot Set"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "^1.0.80", features = ["derive"] }
serde_json = "^1.0.32"
serde_derive = "^1.0.80"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
]